# tinyphaser

./: .gitignore  CMakeLists.txt
runtime/: dom.js  polyfills.js
src/: engine.c  engine.h  main.c
src/shims/: audio.c  canvas.c  document.c  dom_bridge.cpp  events.c  fetch_net.c  image.c  performance.c  text.c  timers.c  webgl.c  webrtc.c  websocket.c
test/2048/: index.html
test/flappy/: index.html
test/luckyalien/: index.html
test/spaceshooter/: index.html
test/stress/: index.html
